sass/app.scss
@import 'colors';

body {
	background: black;
	background-repeat: no-repeat;
	margin: 0;
	overflow-x: hidden;
}

* {
	font-family: 'Abel', sans-serif;
}

h1, h2 {
	font-family: 'Oswald', sans-serif;
}

p {
	font-size: 20px;
}


body {
	height: 100%;
	font-family: 'Abel', sans-serif;
}

.text-center {
	text-align: center;
}

.fade {
	opacity: 0;

	-webkit-transition: opacity 3s; /* Safari */
	transition: opacity 3s;
}

.background {
	position: fixed;
	min-width: 100%;
	min-height: 100%;
	top: 0px;
	right: 0px;
	background-color: black;
	opacity: 0.80;
	z-index: 2;
}

#date, #location {
	font-size: 28pt;
	color: $orange;
	font-family: 'Abel', sans-serif;

	font-weight: bold;
	line-height: 1;
	margin-bottom: 40px;
}

#contact-email {
	font-size: 18pt;
	color: $teal;
}

a {
	color:  $teal;
	text-align: left;
	position: relative;
	float: none;
}

a {
	text-decoration: none;
	color:inherit;
	z-index: 1;
}

.labeled-input {
	position: relative;
	-webkit-box-sizing: content-box !important;
	box-sizing: content-box !important;
}

$spacing: 25px;

.labeled-input > label {
	display: block;
	position: absolute;
	color: $lightBlue;
	top: 50px/2 - 18px/2 + $spacing;
	text-align: center;
	left: 0;
	right: 0;
	line-height: 1;
	font-size: 1.2rem;
	-webkit-transition: top 0.5s, font-size 0.5s; /* Safari */
	transition: top 0.5s, font-size 0.5s;
	z-index: 70;
}
.neon-input:focus + label, .neon-input:valid + label {
	top: $spacing/2 - 18px/2;
}

.neon-input:hover + label {
	color: $darkBlue;
}


.center-link {
	position: relative;
	display: inline-block;
	float: none;
	text-align: center;
}

h1, h2, h3, h4, h5 {
	font-family: 'Abel', sans-serif;
	color: $lightBlue;
}

.footer {
	position: relative;
	margin: 20px auto 10px;
	width: 100%;
	font-family: 'Abel', sans-serif;
	overflow: visible;

}

#media {
	margin-left: 20px;
	float: left;
}

#powered > h4 {
	margin-top: 19px;
	margin-bottom: 19px;
}

#powered {
	float: right;
	padding-top: 20px;
	box-sizing: content-box;
}

#powered h4 {
	color: $lightBlue;
	font-size: 12pt;
	display: inline-block;
	float: left;
}

#powered img {
	display: inline-block;
	height: 60px;
	margin-right: 20px;
}


#mlh-logo {
	position: relative;
	height: 60px;
}

#logo {
	margin: 8vh auto;
	height: auto;

	img {
		margin: 0 auto;
	}
}

#waves {
	position: relative;
	margin: 20px auto 80px;
	display: block;
	width: 133.3vw;//1023px;
	height: 18.8vw;//18.81vw;//192.4px;
	max-height: 200px;
	z-index: 1;
}

#boombox {
	display: none;
	z-index: 10;
	position: absolute;
	left: 84vw;
	bottom: 0;
	height: 750px;
	width: auto;
}

#headphones {
	display: none;
	z-index: 10;
	position: absolute;
	right: 80vw;
	bottom: 0;
	height: 750px;
	width: auto;
}

#surround-sound {
    width: 20vw;
    position: absolute;
    left: 0;
    bottom: -5vw;
}

//For Smaller Screens and Below:
@media only screen and (max-width: 40em) { 
	#logo{ margin-bottom: 2vh; }
	#waves{ width:200vw; height: 28.2vw; margin-bottom: 40px;}
	#date, #location {font-size: 18pt; margin-bottom: 20px;}
	#contact-email { font-size: 16pt;}
	.btn { width: auto !important;}
}

//Xlarge screens
@media only screen and (min-width: 90.063em) { 
	#waves{ width:100vw; height: 14.1vw;}
	#headphones, #boombox { display: block;}
}

.prompt {
	position: fixed;
	top: 35%;
	right: 50%;
	transform: translate(50%, -50%);
	background: $black;
	z-index: 50;
	text-align: left;
	border: 3px solid $darkBlue;
	border-radius: 5px;
	overflow: hidden;
	padding: 0 !important;
}

.prompt > .title-bar {
	position: relative;
	width: 100%;
	background-color: $darkBlue;
	height: 50px;
	top: -3px;
}

.prompt > .content {
	margin: 20px;
	margin-top: 0;
}

.content  .btn {
	margin-top: $spacing;
}

.content input {
	margin-top: $spacing;
	margin-bottom: 0px;
}


.title-bar > * {
	line-height: 50px;
	color: white;
	float: right;
	padding-right: 10px;
}

.title-bar > h1 {
	padding-left: 10px;
	margin: 0;
	float: left;
	text-align: left;
	min-width: 30px;
	display: inline;
	font-size: 2rem;
}

.title-bar > a {
	position: relative;
	float: right;
	text-decoration: underline;
}

.error {
	color: white;
	padding-top: 15px;
}

.errors {
	padding: 15px;
	padding-top: 0;
	background-color: gray;
	width: inherit;
}

.btn {
	z-index: 1;
	position: relative;
	border: 3px solid $lightBlue;
	color: $lightBlue;
	width: 246px;
	display: block;
	border-radius: 5px;
	padding: 15px 45px;
	margin: 15px auto 0 auto;
	font-size: 1.2rem;
	line-height: 1;
	text-transform: uppercase;
	text-align: center;
	cursor: pointer !important;
	-webkit-box-sizing: content-box !important;
	box-sizing: content-box !important;
}

.neon-input {
	z-index: 1 !important;
	position: relative !important;
	border: 3px solid $lightBlue !important;
	background: rgb(250, 250, 250) !important;
	color: $black !important;
	width: 306px !important;
	border-radius: 5px !important;
	padding: 0px 15px 0px 15px !important;
	margin: 25px auto 0 auto !important;
	font-size: 1.2rem !important;
	line-height: 1 !important;
	height: 50px !important;
	z-index: 50  !important;
	font-family: Arial !important;
	-webkit-box-sizing: content-box !important;
	box-sizing: content-box !important;
	display: inline-block !important;
	-webkit-transition: border-color 0.3s, color 0.3s; /* Safari */
	transition: border-color 0.3s, color 0.3s;
}

.neon-input:hover, .neon-input:focus {
	outline: none !important;
	border-color:$darkBlue!important;
}

.info-section {
	z-index: 100;
	position: relative;
	background: linear-gradient(black, $black);
	text-align:  left;
	color: white;
	padding-bottom: 40px;
	padding-top: 50px;
}

.info-section a {
	text-align: left;
	position: relative;
	float: none;
	text-decoration: underline;
}


.btn:hover {
	color: $darkBlue ;
	border-color: $darkBlue;
}

.light-section {
	background-color: white;
	padding-top: 30px;
	margin-bottom: 30px;
}

.light-section a {
	text-decoration: underline;
}

.light-section h2 {
	color: $black;
}


.sponsor-row {
  margin-top: 2rem !important;
	box-sizing: content-box;
}

.sponsor-row  img {
  margin:auto;
  height: 75%;
  width: 75%;
  -moz-filter: grayscale(100%) brightness(100%);
  -ms-filter: grayscale(100%) brightness(100%);
  -webkit-filter: grayscale(100%) brightness(100%);
  -o-filter: grayscale(100%) brightness(100%);
  filter: grayscale(100%) brightness(100%);
  margin-top: 2em;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

.sponsor-row  img:hover {
  -moz-filter: grayscale(0%);
  -ms-filter: grayscale(0%);
  -webkit-filter: grayscale(0%);
  -o-filter: grayscale(0%);
  filter: grayscale(0%);
}

